Added all known add dates from Book Tracker on iOS
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -58,7 +58,7 @@
       isbn13: null
       asin: null
       link: https://conscious-transitions.com/the-wisdom-of-anxiety/
-      date_added: null
+      date_added: 2024-10-06
       date_started: null
       date_finished: 2024-12-30
       recommended: false
@@ -73,7 +73,7 @@
       isbn13: null
       asin: null
       link: https://www.alexkorbphd.com/the-upward-spiral-method/
-      date_added: null
+      date_added: 2024-09-16
       date_started: null
       date_finished: 2024-12-13
       recommended: true
@@ -88,7 +88,7 @@
       isbn13: null
       asin: null
       link: https://www.personalkanban.com/
-      date_added: null
+      date_added: 2024-10-06
       date_started: null
       date_finished: 2024-11-23
       recommended: false
@@ -103,7 +103,7 @@
       isbn13: null
       asin: null
       link: https://www.penguin.co.nz/books/meditations-for-mortals-9781847927620
-      date_added: null
+      date_added: 2024-09-16
       date_started: null
       date_finished: 2024-10-06
       recommended: true
@@ -133,7 +133,7 @@
       isbn13: null
       asin: null
       link: https://www.penguinrandomhouse.com/books/672118/how-big-things-get-done-by-bent-flyvbjerg-and-dan-gardner/
-      date_added: null
+      date_added: 2023-12-24
       date_started: null
       date_finished: 2024-06-01
       recommended: true
@@ -163,7 +163,7 @@
       isbn13: null
       asin: null
       link: https://nostarch.com/hacks-leaks-and-revelations
-      date_added: null
+      date_added: 2024-02-05
       date_started: null
       date_finished: 2024-03-06
       recommended: false
@@ -252,7 +252,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL37513885W/Creative_Doing_75_Practical_Exercises_to_Unblock_Your_Creative_Potential_in_Your_Work_Hobby_or_Next_
-      date_added: null
+      date_added: 2023-12-12
       date_started: null
       date_finished: 2024-01-09
       recommended: false
@@ -266,7 +266,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL24703365W/Digital_Zettelkasten
-      date_added: null
+      date_added: 2023-12-28
       date_started: null
       date_finished: 2024-01-04
       recommended: false
@@ -281,7 +281,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL34804299W/What_the_CEO_Wants_You_to_Know
-      date_added: null
+      date_added: 2023-12-06
       date_started: null
       date_finished: 2024-01-03
       recommended: false
@@ -296,7 +296,7 @@
       isbn13: null
       asin: null
       link: https://www.oreilly.com/library/view/high-performance-browser/9781449344757/
-      date_added: null
+      date_added: 2022-10-01
       date_started: null
       date_finished: 2024-01-03
       recommended: false
@@ -374,7 +374,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL27939130W/Hanging_Out
-      date_added: null
+      date_added: 2023-04-07
       date_started: null
       date_finished: 2023-06-06
       recommended: false
@@ -407,7 +407,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL27739453W/Build
-      date_added: null
+      date_added: 2022-05-15
       date_started: null
       date_finished: 2022-10-29
       recommended: true
@@ -437,7 +437,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL26417584W/Building_a_Second_Brain
-      date_added: null
+      date_added: 2022-09-20
       date_started: null
       date_finished: 2022-09-20
       recommended: false
@@ -452,7 +452,7 @@
       isbn13: null
       asin: null
       link: https://openlibrary.org/works/OL18630860W
-      date_added: null
+      date_added: 2022-09-20
       date_started: null
       date_finished: 2022-09-18
       recommended: true
