Slightly fix up High Output Management and Build dates
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -437,8 +437,8 @@
       isbn13: 9781787634114
       asin: 1787634116
       link: https://openlibrary.org/works/OL27739453W/Build
-      date_added: 2022-05-15
-      date_started: null
+      date_added: 2022-05-11
+      date_started: 2022-05-11
       date_finished: 2022-10-29
       recommended: true
       progress: 100
@@ -452,8 +452,8 @@
       isbn13: 9780679762881
       asin: 0679762884
       link: https://openlibrary.org/works/OL2355834W/High_Output_Management
-      date_added: 2020-09-05
-      date_started: null
+      date_added: 2022-04-03
+      date_started: 2022-04-03
       date_finished: 2022-10-23
       recommended: true
       progress: 100
