Add missing authors
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -261,6 +261,7 @@
   
     - title: Creative Doing
       subtitle: 75 Practical Exercises to Unblock Your Creative Potential in Your Work, Hobby, or Next Career
+      author: Herbert Lui
       cover: https://cdn.utf9k.net/books/creative-doing.jpg
       cover_height: 888
       cover_width: 584
@@ -275,6 +276,7 @@
 
     - title: Digital Zettelkasten
       subtitle: Principles, Methods, & Examples
+      author: David Kadavy
       cover: https://cdn.utf9k.net/books/digital-zettelkasten.jpg
       cover_height: 1360
       cover_width: 850
